--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/9308/9308944.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Panel de KPIs - Estilo Looker Studio</title>
+    <title>12 KPI en JavaScript 📊</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
