--- a/index.html
+++ b/index.html
@@ -180,24 +180,30 @@
                     <p class="profile-modal-title">Desarrollador Full-Stack & Consultor BI 📊</p>
                 </div>
                 <div class="profile-modal-body">
-                    <p>¡Hola! 👋 Soy Juancito, un apasionado desarrollador con experiencia en la creación de soluciones web dinámicas y visualizaciones de datos impactantes. Me especializo en convertir datos complejos en insights accionables.</p>
-                    <p>Si buscas llevar tus proyectos al siguiente nivel con análisis de datos avanzados, dashboards personalizados o desarrollo web a medida, ¡hablemos! 🚀</p>
+                    <p>¡Hola! 👋 Soy Juancito, un apasionado desarrollador con experiencia en la creación de soluciones web dinámicas y
+                        visualizaciones de datos impactantes. Me especializo en convertir datos complejos en insights accionables.</p>
+                    <p>Si buscas llevar tus proyectos al siguiente nivel con análisis de datos avanzados, dashboards personalizados o
+                        desarrollo web a medida, ¡hablemos! 🚀</p>
+                    <p><strong>Servicios y Consultorías:</strong></p>
                     <p><strong>Servicios y Consultorías:</strong></p>
                     <ul>
-                        <li>📊 Desarrollo de Dashboards y KPIs (Excel, Power BI, Python, Javsascript)</li> 
+                        <li>📊 Desarrollo de Dashboards y KPIs (Excel, Power BI, Python, JavaScript)</li>
                         <li>💻 Desarrollo Web Full-Stack (JavaScript, Python, etc.)</li>
                         <li>📈 Consultoría en Business Intelligence</li>
                         <li>🛢️ Modelado de Base de Datos</li>
+                        <li>👔 Servicios de Asesoría para Entrenamientos Empresariales</li>
+                        <li>🎓 Cursos y Diplomados por Pago (Modalidad por Horas)</li>
                     </ul>
+
                     <p>No dudes en contactarme para explorar cómo podemos colaborar. 😊</p>
                 </div>
                 <div class="profile-modal-social">
-                    <a href="https://github.com/juancitopena" target="_blank" class="social-btn github"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="https://linkedin.com/in/juancitopena" target="_blank" class="social-btn linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                    <a href="https://youtube.com/c/juancitopena" target="_blank" class="social-btn youtube"><i class="fab fa-youtube"></i> YouTube</a>
-                    <a href="https://instagram.com/juancitopena" target="_blank" class="social-btn instagram"><i class="fab fa-instagram"></i> Instagram</a>
-                    <a href="https://twitter.com/juancitopena" target="_blank" class="social-btn twitter"><i class="fab fa-twitter"></i> Twitter/X</a>
-                    <a href="https://facebook.com/juancitopena" target="_blank" class="social-btn facebook"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a href="https://github.com/JUANCITOPENA?tab=repositories" target="_blank" class="social-btn github"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="https://www.linkedin.com/in/juancitope%C3%B1a/" target="_blank" class="social-btn linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="https://www.youtube.com/channel/UCSob-3E5z4IHtMF5B4bN-FA" target="_blank" class="social-btn youtube"><i class="fab fa-youtube"></i> YouTube</a>
+                    <a href="https://www.instagram.com/juancito.pena.v/" target="_blank" class="social-btn instagram"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://x.com/JuancitoPenaV" target="_blank" class="social-btn twitter"><i class="fab fa-twitter"></i> Twitter/X</a>
+                    <a href="https://www.facebook.com/juancito.p.v/" target="_blank" class="social-btn facebook"><i class="fab fa-facebook"></i> Facebook</a>
                 </div>
             </div>
         </div>
